[CR] Added segments actions and action for tracking impression
