# api/swagger/swagger.yml
@@ -3,9 +3,9 @@ schemes:
   - http
 swagger: "2.0"
 info:
-  description: Desc here
-  title: creative rotation
-  version: 1.0.0
+  description: Simple creative targetting sustem using UCB1 learning algorithm
+  title: Creative Rotation
+  version: 0.0.1
 definitions:
   creative:
     type: object
@@ -38,6 +38,29 @@ definitions:
         type: string
         minLength: 1
   conversion:
+    type: object
+    required:
+      - creative_id
+      - slot_id
+      - segment_id
+    properties:
+      id:
+        type: integer
+        format: int64
+        readOnly: true
+      creative_id:
+        type: integer
+        format: int64
+      slot_id:
+        type: integer
+        format: int64
+      segment_id:
+        type: integer
+        format: int64
+      time:
+        type: string
+        format: date-time
+  impression:
     type: object
     required:
       - creative_id
@@ -104,6 +127,26 @@ paths:
           description: creates new creative
           schema:
             $ref: "#/definitions/creative"
+  /creative/{creative_id}/slot/{slot_id}:
+    parameters:
+      - in: path
+        name: creative_id
+        description: Creative ID
+        required: true
+        type: integer
+        format: int64
+      - in: path
+        name: slot_id
+        required: true
+        type: integer
+        format: int64
+        description: The slot to remove creative from.
+    delete:
+      tags:
+        - creatives
+      responses:
+        200:
+          description: removes creative from slot
   /creative/{id}/slot:
     parameters:
       - in: path
@@ -114,7 +157,7 @@ paths:
         format: int64
       - in: body
         name: slot
-        description: The slot to add/remove creative to/from.
+        description: The slot to add creative to.
         schema:
           $ref: "#/definitions/slot"
     post:
@@ -125,12 +168,6 @@ paths:
           description: adds creative to slot
           schema:
             $ref: "#/definitions/slot-creative"
-    delete:
-      tags:
-        - creatives
-      responses:
-        200:
-          description: removes creative from slot
   /creative/next:
     get:
       tags:
@@ -156,6 +193,22 @@ paths:
           description: tracks new conversion for creative/slot/segment
           schema:
             $ref: "#/definitions/conversion"
+  /impression:
+    post:
+      tags:
+        - creatives
+      parameters:
+        - in: body
+          name: impression
+          description: The impression params.
+          schema:
+            type: object
+            $ref: "#/definitions/impression"
+      responses:
+        200:
+          description: tracks new impression for creative/slot/segment
+          schema:
+            $ref: "#/definitions/impression"
   /slot:
     get:
       tags:
