# internal/server/http/server.go
@@ -35,12 +35,17 @@ func (s *Server) Start(ctx context.Context) error {
 	mux.HandleFunc("/noop", s.service.Noop).Methods("GET")
 	mux.HandleFunc("/creative", s.service.Creatives().All).Methods("GET")
 	mux.HandleFunc("/creative", s.service.Creatives().New).Methods("POST")
-	mux.HandleFunc("/creative/{id:[0-9]+}/slot", s.service.Creatives().AddToSlot).Methods("POST")
-	mux.HandleFunc("/creative/{id:[0-9]+}/slot", s.service.Creatives().RemoveFromSlot).Methods("DELETE")
+	mux.HandleFunc("/creative/{creative_id:[0-9]+}/slot", s.service.Creatives().AddToSlot).
+		Methods("POST")
+	mux.HandleFunc("/creative/{creative_id:[0-9]+}/slot/{slot_id:[0-9]+}", s.service.Creatives().RemoveFromSlot).
+		Methods("DELETE")
 	mux.HandleFunc("/conversion", s.service.Creatives().TrackConversion).Methods("POST")
+	mux.HandleFunc("/impression", s.service.Creatives().TrackImpression).Methods("POST")
 	mux.HandleFunc("/creative/next", s.service.Creatives().Next).Methods("GET")
 	mux.HandleFunc("/slot", s.service.Slots().All).Methods("GET")
 	mux.HandleFunc("/slot", s.service.Slots().New).Methods("POST")
+	mux.HandleFunc("/segment", s.service.Segments().All).Methods("GET")
+	mux.HandleFunc("/segment", s.service.Segments().New).Methods("POST")
 
 	s.httpServer = &http.Server{
 		Addr:    net.JoinHostPort(s.cfg.Host, strconv.Itoa(s.cfg.Port)),
